fix(swagger): use correct type for nut server config
